<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.product.VListarProductosActivity">

    <LinearLayout
        android:id="@+id/linearLayout_prod"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout_title_prod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/txt_tittle_prod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="40dp"
                android:text="@string/txt_product"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_inicio_prod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn_bg_primary"
                android:gravity="center"
                android:paddingHorizontal="15dp"
                android:text="@string/btn_inicio"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_añadir_prod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:paddingHorizontal="15dp"
                android:text="@string/btn_nuevo"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <ListView
            android:id="@+id/list_view_prod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_x="5dp"
            android:layout_y="307dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>